make sure a valid method gets selected when PlayBackDialog opens

BUG: 439543